...
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Password here..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Uf-tO-uBE">
                                <rect key="frame" x="200" y="112" width="200" height="40"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                <state key="normal" title="Not Signed Up?" backgroundImage="whiteButtonBackground">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Username here..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GtU-pX-n7P">
                                <rect key="frame" x="200" y="50" width="200" height="40"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                <state key="normal" title="Ready to Login" backgroundImage="blueButtonBackground">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pZX-Q1-CTI">
                                        <rect key="frame" x="10" y="150" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="25" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dpe-OW-raw">
                                        <rect key="frame" x="10" y="240" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="29" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Country" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="E99-zW-bWD">
                                        <rect key="frame" x="10" y="420" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wRZ-Ug-YJ4">
                                        <rect key="frame" x="10" y="60" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="27" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone number" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="GlH-7y-BiX">
                                        <rect key="frame" x="10" y="330" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date of Birth" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cbQ-ju-gKM">
                                        <rect key="frame" x="10" y="195" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="26" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yWc-ci-v72">
                                        <rect key="frame" x="10" y="285" width="580" height="30"/>
                                        <constraints>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" tag="28" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Gender" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2DH-bo-jNl">
                                        <rect key="frame" x="10" y="375" width="580" height="30"/>
                                        <constraints>
...
                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                <items>
                                    <navigationItem title="New Account" id="SdE-rw-gWk">
                                        <barButtonItem key="leftBarButtonItem" title="Dismiss" id="eA5-B3-UqG">
                                            <connections>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Create Account" id="ZrN-cZ-ved">
                                            <connections>
                                                <action selector="createAccountTapped:" destination="sr2-sJ-eHH" id="XXm-ky-P47"/>
...
