...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Dashboard-->
        <scene sceneID="xXk-4H-DEw">
            <objects>
                <viewController title="Dashboard" id="H6G-En-uqY" customClass="DashboardViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="aqs-9P-IKj"/>
                        <viewControllerLayoutGuide type="bottom" id="6lK-JA-6V7"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="eVY-Wo-fsV">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
            </objects>
            <point key="canvasLocation" x="-418" y="46"/>
        </scene>
        <!--Weight Graph-->
        <scene sceneID="um1-CK-iTy">
            <objects>
                <viewController title="Weight Graph" id="G3V-Tv-rDn" customClass="HealthViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="boR-j4-nxZ"/>
                        <viewControllerLayoutGuide type="bottom" id="NS5-XY-9Ej"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="w8R-jj-shg">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <rect key="frame" x="248" y="45" width="105" height="29"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="cSk-Sa-NtO"/>
                                </constraints>
                                <segments>
                                    <segment title="Graph"/>
                                    <segment title="List"/>
                                </segments>
                                <color key="tintColor" red="0.2156862745" green="0.76078431369999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                <connections>
                                    <action selector="changeType:" destination="G3V-Tv-rDn" eventType="valueChanged" id="Mhv-30-DlD"/>
                                </connections>
                            </segmentedControl>
...
            </objects>
            <point key="canvasLocation" x="304" y="46"/>
        </scene>
        <!--Treatment History-->
        <scene sceneID="NgM-l8-Zon">
            <objects>
                <tableViewController title="Treatment History" id="aox-nt-w2c" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="sSF-SU-EnS">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <sections>
                            <tableViewSection headerTitle="Nov 20, 2015" id="y0u-c3-l1q">
...
            </objects>
            <point key="canvasLocation" x="932" y="918"/>
        </scene>
        <!--Allergies-->
        <scene sceneID="ghk-gV-r1C">
            <objects>
                <tableViewController title="Allergies" id="Q2J-t3-tWS" customClass="AllergiesViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="yQb-Xi-WH5">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="r00-59-cC0" customClass="ImageDetailTableViewCell">
...
